add comments for residual

--- a/pendulum.ipynb
+++ b/pendulum.ipynb
@@ -321,13 +321,10 @@
     "Como mencionado no livro, podemos ter uma ideia da acurácia de cada método usado o fato de que a solução deve satisfazer\n",
     "\n",
     "\\begin{equation}\n",
+    "    r(y) = y_1^2 + y_2^2 + y_3^2 -1 = 0\n",
+    "\\end{equation}\n",
     "\n",
-    "    r(y) = y_1^2 + y_2^2 + y_3^2 -1 = 0\\\\\n",
-    "\n",
-    "    y1 = x\\\\\n",
-    "    y_2 = y\n",
-    "\n",
-    "\\end{equation}"
+    "sendo que $y_1, y_2$ e $y_3$ é a posição $x,y,z$ no instante de tempo $t_n$."
    ]
   },
   {
@@ -339,6 +336,17 @@
     "r1 = abs(sol_FE2[-1,0]**2 + sol_FE2[-1,1]**2 + sol_FE2[-1,2]**2 -1)\n",
     "r2 = abs(sol_FE1[-1,0]**2 + sol_FE1[-1,1]**2 + sol_FE1[-1,2]**2 -1)\n",
     "print(f\"O residuo r para o Forward Euler com h = 0.00025 é {r1:.4f} e com h = 0.0025 é {r2:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Os resultados são idênticos ao do livro.\n",
+    "\n",
+    "> By using 10.000 discretization nodes we find $r = 1.0578$, while\n",
+    "with 100.000 nodes we have $r = 0.1111$, in accordance with the theory\n",
+    "requiring the explicit Euler method to converge with order 1."
    ]
   },
   {
@@ -406,6 +414,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Aqui tambem temos um resultado parecido.\n",
+    "\n",
+    "> By using the implicit Euler method with 20000 steps we obtain the\n",
+    " solution reported in Figure 8.19, while the Crank-Nicolson method (of\n",
+    " order 2) with only 1000 steps provides the solution reported in the same\n",
+    " ﬁgure on the right, which is undoubtedly more accurate. Indeed, we ﬁnd\n",
+    " $r = 0.5816$ for the implicit Euler method and $r = 0.0928$ for the Crank-\n",
+    " Nicolson method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### RK23 e RK45"
    ]
   },
@@ -456,6 +478,16 @@
     "r_RK23 = abs(sol_RK23.y[0,-1]**2 + sol_RK23.y[1,-1]**2 + sol_RK23.y[2,-1]**2 -1)\n",
     "r_RK45 = abs(sol_RK45.y[0,-1]**2 + sol_RK45.y[1,-1]**2 + sol_RK45.y[2,-1]**2 -1)\n",
     "print(f\"O residuo r para o RK23 é {r_RK23:.4f} e o residuo r para o RK45 é {r_RK45:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Já aqui têmos resultados diferentes do livro.\n",
+    "\n",
+    "> The residual $r$ is equal to $0.0238$ for ode23\n",
+    " and $ 3.2563 $ for ode45"
    ]
   },
   {
