--- a/pendulum.ipynb
+++ b/pendulum.ipynb
@@ -544,11 +544,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Aqui também temos resultados bem diferntes.\n",
+    "\n",
+    ">Precisely ode23 ... provides a residual $r = 0.003$,\n",
+    "while ode45 ... provides a residual $r = 0.060.$"
+   ]
   }
  ],
  "metadata": {
