added final comment about residual

--- a/pendulum.ipynb
+++ b/pendulum.ipynb
@@ -49,7 +49,7 @@
     "*   Backward Euler\n",
     "*   Crank-Nicolson\n",
     "\n",
-    "Usarei também o `solve_ivp` da biblioteca `scipy` para a solução com o RK23 e RK45."
+    "Usarei também o `solve_ivp` da biblioteca `scipy` para a solução com o RK23 = ODE23 e RK45 = ODE45."
    ]
   },
   {
@@ -533,24 +533,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O plot do RK45 ficou mais parecido com o do livro ajustando rtol = 1e-5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r_RK23 = abs(sol_RK23.y[0,-1]**2 + sol_RK23.y[1,-1]**2 + sol_RK23.y[2,-1]**2 -1)\n",
-    "r_RK45 = abs(sol_RK45.y[0,-1]**2 + sol_RK45.y[1,-1]**2 + sol_RK45.y[2,-1]**2 -1)\n",
-    "print(f\"O residuo r para o RK23 é {r_RK23:.4f} e o residuo r para o RK45 é {r_RK45:.4f}\")"
+    "r_RK23_rtol = abs(sol_RK23_rtol.y[0,-1]**2 + sol_RK23_rtol.y[1,-1]**2 + sol_RK23_rtol.y[2,-1]**2 -1)\n",
+    "r_RK45_rtol = abs(sol_RK45_rtol.y[0,-1]**2 + sol_RK45_rtol.y[1,-1]**2 + sol_RK45_rtol.y[2,-1]**2 -1)\n",
+    "print(f\"O residuo r para o RK23 é {r_RK23_rtol:.4f} e o residuo r para o RK45 é {r_RK45_rtol:.4f}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aqui também temos resultados bem diferntes.\n",
+    "Aqui também temos resultados bem diferntes pro RK45.\n",
     "\n",
     ">Precisely ode23 ... provides a residual $r = 0.003$,\n",
-    "while ode45 ... provides a residual $r = 0.060.$"
+    "while ode45 ... provides a residual $r = 0.060.$\n",
+    "\n",
+    "Tanto nesse quanto no anterior, $r_{(RK45)} \\approx 5r_{(livro)}$"
    ]
   }
  ],
