added y0 to the PLotSol func

--- a/pendulum.ipynb
+++ b/pendulum.ipynb
@@ -212,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def PlotSol(x1,y1,z1,x2,y2,z2,name1, name2,title):\n",
+    "def PlotSol(x1,y1,z1,x2,y2,z2,name1, name2,title, y0 = [0,0,0]):\n",
     "    \n",
     "    fig = make_subplots(\n",
     "        rows=1, cols=2,\n",
