removed useless line

--- a/pendulum.ipynb
+++ b/pendulum.ipynb
@@ -12,6 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# NÃO SALVE ESSE NOTEBOOK COM OS PLOTS. OCUPAM MUITA MEMÓRIA. LIMPE OS OUTPUTS ANTES DE SALVAR."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Simulação Numérica da Dinâmica do Pêndulo Esférico\n",
     "\n",
     "Reprodução do exemplo 8.10.1 do livro Scientific Computing with MATLAB and Octave 4th edition."
@@ -19,15 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.integrate import solve_ivp\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots"
    ]
@@ -124,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +151,7 @@
     "        u = np.vstack((u, w))\n",
     "        glob_y = w\n",
     "    \n",
-    "    t = np.array(tt).reshape(-1, 1)\n",
-    "    \n",
-    "    return t, u"
+    "    return tt, u"
    ]
   },
   {
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
