added scatter y0 label

--- a/pendulum.ipynb
+++ b/pendulum.ipynb
@@ -203,8 +203,10 @@
     "Eu pretendia utilizar o Plotly para gerar gráficos 3d interativos, porém os gráficos eram tão pesados que o arquivo ficava imenso.\n",
     "Caso queira tentar, deixei a implementação comentada. Basta comentar o outro.\n",
     "\n",
-    "Recomendo que não plot todos os gráficos de uma vez  usando o Plotly. Plot um, limpe o output e plot outro.\n",
-    "O último é especialmente pesado pela quantidade grande de dados."
+    "Recomendo que não plot todos os gráficos de uma vez usando o Plotly. Plot um, limpe o output e plot outro.\n",
+    "O último é especialmente pesado pela quantidade grande de dados.\n",
+    "\n",
+    "Não é possível plotar esses gráficos com o Plotly no Colab a menos que voce tenha pago para ter mais processamento."
    ]
   },
   {
@@ -299,8 +301,13 @@
     "    ax2.set_title(str(name2))\n",
     "\n",
     "    # Adiciona o ponto inicial.\n",
-    "    ax1.scatter(y0[0], y0[1], y0[2], color = 'red')\n",
-    "    ax2.scatter(y0[0], y0[1], y0[2], color = 'red')"
+    "    ax1.scatter(y0[0], y0[1], y0[2], color = 'red', label = 'y0')\n",
+    "    ax2.scatter(y0[0], y0[1], y0[2], color = 'red', label = 'y0')\n",
+    "    \n",
+    "    ax1.legend()\n",
+    "    ax2.legend()\n",
+    "    \n",
+    "    return None"
    ]
   },
   {
@@ -655,6 +662,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "O possível ver que o plot do RK23 com rtol= 1e-4 foi o melhor de todos.\n",
+    "\n",
     "O plot do RK45 ficou mais parecido com o do livro ajustando rtol = 1e-5"
    ]
   },
