--- a/pendulum.ipynb
+++ b/pendulum.ipynb
@@ -227,53 +227,59 @@
    ],
    "source": [
     "# Plota usando o Plotly (gráficos 3d interativos, porém muito pesados).\n",
-    "\"\"\"\n",
+    "\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "\n",
-    "def PlotSol(x1,y1,z1,x2,y2,z2,name1, name2,title, y0):\n",
-    "    \n",
-    "    fig = make_subplots(\n",
-    "        rows=1, cols=2,\n",
-    "        specs=[[{'type': 'scatter3d'}, {'type': 'scatter3d'}]])\n",
+    "class PlotBonitao:\n",
+    "    def __init__(self) -> None:\n",
+    "        pass\n",
     "\n",
-    "    #plot1\n",
-    "    fig.add_trace(go.Scatter3d(\n",
-    "            x=x1,\n",
-    "            y=y1,\n",
-    "            z=z1,\n",
-    "            mode='lines',\n",
-    "            name = str(name1)\n",
-    "            ),\n",
-    "        row=1, col=1\n",
-    "    )\n",
+    "    def PlotSol(self,x1,y1,z1,x2,y2,z2,name1, name2,title, y0):\n",
+    "        \n",
+    "        fig = make_subplots(\n",
+    "            rows=1, cols=2,\n",
+    "            specs=[[{'type': 'scatter3d'}, {'type': 'scatter3d'}]])\n",
     "\n",
-    "    #plot2\n",
-    "    fig.add_trace(go.Scatter3d(\n",
-    "            x=x2,\n",
-    "            y=y2,\n",
-    "            z=z2,\n",
-    "            mode='lines',\n",
-    "            name = str(name2)\n",
-    "            ),\n",
-    "        row=1, col=2\n",
-    "    )\n",
+    "        #plot1\n",
+    "        fig.add_trace(go.Scatter3d(\n",
+    "                x=x1,\n",
+    "                y=y1,\n",
+    "                z=z1,\n",
+    "                mode='lines',\n",
+    "                name = str(name1)\n",
+    "                ),\n",
+    "            row=1, col=1\n",
+    "        )\n",
     "\n",
-    "    # Adiciona o ponto inicial.\n",
-    "    fig.add_trace(go.Scatter3d(\n",
-    "            x = [y0[0]],\n",
-    "            y = [y0[1]],\n",
-    "            z = [y0[2]],\n",
-    "            mode = 'markers',\n",
-    "            name = 'y0',\n",
-    "            marker = dict(size=3, color='red')\n",
-    "            ),\n",
-    "        row = 'all', col = 'all'\n",
-    "    )\n",
+    "        #plot2\n",
+    "        fig.add_trace(go.Scatter3d(\n",
+    "                x=x2,\n",
+    "                y=y2,\n",
+    "                z=z2,\n",
+    "                mode='lines',\n",
+    "                name = str(name2)\n",
+    "                ),\n",
+    "            row=1, col=2\n",
+    "        )\n",
     "\n",
-    "    fig.update_layout(height=800, width=1500, title_text= str(title))\n",
-    "    return fig\n",
-    "\"\"\""
+    "        # Adiciona o ponto inicial.\n",
+    "        fig.add_trace(go.Scatter3d(\n",
+    "                x = [y0[0]],\n",
+    "                y = [y0[1]],\n",
+    "                z = [y0[2]],\n",
+    "                mode = 'markers',\n",
+    "                name = 'y0',\n",
+    "                marker = dict(size=3, color='red')\n",
+    "                ),\n",
+    "            row = 'all', col = 'all'\n",
+    "        )\n",
+    "\n",
+    "        fig.update_layout(height=800, width=1500, title_text= str(title))\n",
+    "\n",
+    "        fig.show()\n",
+    "        \n",
+    "        return "
    ]
   },
   {
@@ -284,30 +290,36 @@
    "source": [
     "# Plota usando o Matplotlib (gráficos 3d não interativos e feios).\n",
     "\n",
-    "def PlotSol(x1,y1,z1,x2,y2,z2,name1, name2,title, y0):\n",
+    "class PlotFeioso:\n",
+    "    def __init__(self) -> None:\n",
+    "        pass\n",
     "    \n",
-    "    fig = plt.figure(figsize=(15, 8))\n",
-    "    fig.suptitle(str(title))\n",
-    "    \n",
-    "    ax1 = fig.add_subplot(121, projection='3d')\n",
-    "    ax2 = fig.add_subplot(122, projection='3d')\n",
+    "    def PlotSol(self,x1,y1,z1,x2,y2,z2,name1, name2,title, y0):\n",
+    "        \n",
+    "        fig = plt.figure(figsize=(15, 8))\n",
+    "        fig.suptitle(str(title))\n",
+    "        \n",
+    "        ax1 = fig.add_subplot(121, projection='3d')\n",
+    "        ax2 = fig.add_subplot(122, projection='3d')\n",
     "\n",
-    "    #plot1\n",
-    "    ax1.plot(x1,y1,z1,)\n",
-    "    ax1.set_title(str(name1))\n",
-    "    \n",
-    "    #plot2\n",
-    "    ax2.plot(x2,y2,z2,)\n",
-    "    ax2.set_title(str(name2))\n",
+    "        #plot1\n",
+    "        ax1.plot(x1,y1,z1,)\n",
+    "        ax1.set_title(str(name1))\n",
+    "        \n",
+    "        #plot2\n",
+    "        ax2.plot(x2,y2,z2,)\n",
+    "        ax2.set_title(str(name2))\n",
     "\n",
-    "    # Adiciona o ponto inicial.\n",
-    "    ax1.scatter(y0[0], y0[1], y0[2], color = 'red', label = 'y0')\n",
-    "    ax2.scatter(y0[0], y0[1], y0[2], color = 'red', label = 'y0')\n",
-    "    \n",
-    "    ax1.legend()\n",
-    "    ax2.legend()\n",
-    "    \n",
-    "    return None"
+    "        # Adiciona o ponto inicial.\n",
+    "        ax1.scatter(y0[0], y0[1], y0[2], color = 'red', label = 'y0')\n",
+    "        ax2.scatter(y0[0], y0[1], y0[2], color = 'red', label = 'y0')\n",
+    "        \n",
+    "        ax1.legend()\n",
+    "        ax2.legend()\n",
+    "        \n",
+    "        plt.show()\n",
+    "        \n",
+    "        return None"
    ]
   },
   {
