--- a/pendulum.ipynb
+++ b/pendulum.ipynb
@@ -202,7 +202,6 @@
     "Caso queira tentar, deixei a implementação comentada. Basta comentar o outro.\n",
     "\n",
     "Recomendo que não plot todos os gráficos de uma vez usando o Plotly. Plot um, limpe o output e plot outro.\n",
-    "O último é especialmente pesado pela quantidade grande de dados.\n",
     "\n",
     "Não é possível plotar esses gráficos com o Plotly no Colab a menos que voce tenha pago para ter mais processamento."
    ]
@@ -523,7 +522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aqui tambem temos um resultado parecido.\n",
+    "Aqui tambem temos um resultado parecido com o do livro:\n",
     "\n",
     "> By using the implicit Euler method with 20000 steps we obtain the\n",
     " solution reported in Figure 8.19, while the Crank-Nicolson method (of\n",
@@ -612,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Já aqui têmos resultados diferentes do livro.\n",
+    "Já aqui têmos resultados diferentes do livro:\n",
     "\n",
     "> The residual $r$ is equal to $0.0238$ for ode23\n",
     " and $ 3.2563 $ for ode45"
@@ -704,7 +703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aqui também temos resultados bem diferntes pro RK45.\n",
+    "Aqui também temos resultados bem diferntes pro RK45:\n",
     "\n",
     ">Precisely ode23 ... provides a residual $r = 0.003$,\n",
     "while ode45 ... provides a residual $r = 0.060.$\n",
