added axes labels

--- a/Tarefas/Pendulum_Simulation/pendulum.ipynb
+++ b/Tarefas/Pendulum_Simulation/pendulum.ipynb
@@ -308,10 +308,16 @@
     "        #plot1\n",
     "        ax1.plot(x1,y1,z1,)\n",
     "        ax1.set_title(str(name1))\n",
-    "        \n",
+    "        ax1.set_xlabel('x')\n",
+    "        ax1.set_ylabel('y')\n",
+    "        ax1.set_zlabel('z')\n",
+    "\n",
     "        #plot2\n",
     "        ax2.plot(x2,y2,z2,)\n",
     "        ax2.set_title(str(name2))\n",
+    "        ax2.set_xlabel('x')\n",
+    "        ax2.set_ylabel('y')\n",
+    "        ax2.set_zlabel('z')\n",
     "\n",
     "        # Adiciona o ponto inicial.\n",
     "        ax1.scatter(y0[0], y0[1], y0[2], color = 'red', label = 'y0')\n",
